--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
       <h1>شريكك الأمثل في التميز الرياضي</h1>
       <p>نقدّم حلولًا رياضية متكاملة للأندية والأفراد — تدريب، تأهيل، تنظيم بطولات، وإنشاء أكاديميات احترافية.</p>
       <div class="hero-ctas">
-        <a href="#services" class="btn-primary">خدماتنا</a>
-        <a href="#contact" class="btn-ghost">تواصل معنا</a>
+        <a href="services.html" class="btn-primary">خدماتنا</a>
+        <a href="contact.html" class="btn-ghost">تواصل معنا</a>
       </div>
     </div>
   </section>
@@ -865,3 +865,4 @@ const closeBtn = document.querySelector(".close");
 
 </body>
 </html>
+
