--- a/en-index.html
+++ b/en-index.html
@@ -516,8 +516,8 @@
     <h1>Your Ultimate Partner in Sports Excellence</h1>
     <p>We provide comprehensive sports solutions for clubs and individuals — training, development, tournament organization, and professional academies.</p>
     <div class="hero-ctas">
-      <a href="#services" class="btn-primary">Our Services</a>
-      <a href="#contact" class="btn-ghost">Contact Us</a>
+      <a href="en-servises.html" class="btn-primary">Our Services</a>
+      <a href="en-contact.html" class="btn-ghost">Contact Us</a>
     </div>
   </div>
 </section>
@@ -728,3 +728,4 @@ const closeBtn = document.querySelector(".close");
 
 </body>
 </html>
+
