--- a/en-index.html
+++ b/en-index.html
@@ -516,7 +516,7 @@
     <h1>Your Ultimate Partner in Sports Excellence</h1>
     <p>We provide comprehensive sports solutions for clubs and individuals — training, development, tournament organization, and professional academies.</p>
     <div class="hero-ctas">
-      <a href="en-servises.html" class="btn-primary">Our Services</a>
+      <a href="en-services.html" class="btn-primary">Our Services</a>
       <a href="en-contact.html" class="btn-ghost">Contact Us</a>
     </div>
   </div>
@@ -728,4 +728,5 @@ const closeBtn = document.querySelector(".close");
 
 </body>
 </html>
+
 
