--- a/index.html
+++ b/index.html
@@ -821,9 +821,9 @@ document.querySelectorAll('.program').forEach(card => {
       </div>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2025 Middle East Players. جميع الحقوق محفوظة.</p>
-    </div>
+<div class="footer-bottom">
+  <p>© 2025 Middle East Players. جميع الحقوق محفوظة. Powered by EQTech Jordan</p>
+</div>
   </footer>
 
   <!-- JS -->
@@ -865,4 +865,5 @@ const closeBtn = document.querySelector(".close");
 
 </body>
 </html>
+
 
