--- a/en-index.html
+++ b/en-index.html
@@ -683,9 +683,9 @@
     </div>
   </div>
 
-  <div class="footer-bottom">
-    <p>© 2025 Middle East Players. All rights reserved.</p>
-  </div>
+<div class="footer-bottom">
+  <p>© 2025 Middle East Players. جميع الحقوق محفوظة. Powered by EQTech Jordan</p>
+</div>
 </footer>
 
 
@@ -728,5 +728,6 @@ const closeBtn = document.querySelector(".close");
 
 </body>
 </html>
+
 
 
